# VR_Teleop_Interface

./: .env  .gitignore  Dockerfile  Doxyfile  README.md  data_capture.py  docker-compose.yml  docker_compose.yml  monitor.py  newTest.sh
.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Assets/: cameraLrendertex.renderTexture  cameraRrendertex.renderTexture  lefte.mat  righte.mat  testing.inputactions
Assets/MRTemplateAssets/Prefabs/: MRInteractionSetup.prefab
Assets/Oculus/: OculusProjectConfig.asset
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: SampleScene.unity
Assets/Settings/Build Profiles/: VR HMD Quest2.asset
Assets/XR/Settings/: OpenXRPackageSettings.asset
Assets/scripts/: ControllerInput.cs  ControllerPublisher.cs  MeshGenerator.cs  StereoCameraFeed.cs  cameraInput.cs  cameraManager.cs  controllerVibrationManager.cs  imageSubscriber.cs  rumbleSubscriber.cs  sshRunner.cs  sshRunnerFranka.cs
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
docs/: Doxyfile  cameraDiagram.md  controllerDiagram.md  franka_diagram.md  ft_sensor_diagram.md  genaral_diagram.md  gripper_diagram.md  zed_diagram.md
docs/SequenceDiagrams/: CommandConsum.md  CommandInterface.md  CommandPub.md  ImageCapProc.md  ImageTrans.md  RobotControl.md
docs/html/: ____init_____8py.html  annotated.html  annotated_dup.js  classes.html  classmiddle__nodes_1_1zed__stream_1_1ZEDStreamReceiverNode-members.html  classmiddle__nodes_1_1zed__stream_1_1ZEDStreamReceiverNode.html  classmiddle__nodes_1_1zed__stream_1_1ZEDStreamReceiverNode.js  classmiddle__nodes_1_1zed__stream_1_1ZEDStreamReceiverNode__coll__graph.map  classmiddle__nodes_1_1zed__stream_1_1ZEDStreamReceiverNode__coll__graph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge-members.html  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge.html  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge.js  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge__coll__graph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge__inherit__graph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a01f05f1b2fe911f600ac7e3825e3392e_cgraph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a01f05f1b2fe911f600ac7e3825e3392e_cgraph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a3354ccf1a704db42222b44b49265aa00_cgraph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a3354ccf1a704db42222b44b49265aa00_cgraph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a6f0b456af6711ab1bc0a5abb855a7083_cgraph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a6f0b456af6711ab1bc0a5abb855a7083_cgraph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a6f0b456af6711ab1bc0a5abb855a7083_icgraph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_a6f0b456af6711ab1bc0a5abb855a7083_icgraph.md5  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_ac5fd6b55ee5189aa238d8dd922c39ee2_icgraph.map  classmiddle__nodes_1_1zedimage__bridge_1_1ZEDImageBridge_ac5fd6b55ee5189aa238d8dd922c39ee2_icgraph.md5  dir_2e8d2fab800e2ddb0e36d03869dfd681.html  dir_4f25045428dc051e9351c57ce95d99a3.html  dir_546b1738393fb848c02c767d275e7385.html  dir_d38df7659ed0bfcae3cb33fbeaad8d13.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  (+35 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  (+16 more)
franka_bringup/config/: controllers.yaml
franka_bringup/launch/: cartesian_velocity_example_controller.launch.py  franka.launch.py
franka_example_controllers/src/: cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp
franka_fr3_moveit_config/launch/: moveit.launch.py
ft_sensor_node/: CMakeLists.txt
ft_sensor_node/launch/: ft_sensor.launch.py
ft_sensor_node/src/: ft_sensor_node.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
src/: docker-compose.yml
src/franka_example_controllers/: CMakeLists.txt
src/franka_teleop_pkg/: .gitlab-ci.yml  CMakeLists.txt  README.md  franka_teleop_pkg.xml  package.xml
src/franka_teleop_pkg/config/: cartesian_impedance_controller.yaml
src/franka_teleop_pkg/docs/: controlDiagram.md  gripperDiagram.md
src/franka_teleop_pkg/include/franka_teleop_pkg/: cartesian_impedance_controller.hpp  pseudo_inversion.hpp  testeo.hpp
src/franka_teleop_pkg/launch/: bringup_cartesian_impedance_controller.launch.py  cartesian_impedance_controller.launch.py  controller_manager.launch.py  teleop.launch.py
src/franka_teleop_pkg/src/: cartesian_impedance_controller.cpp  testeo.cpp
src/franka_teleop_pkg/test/: test_load_cartesian_impedance_controller.cpp
src/franka_teleop_pkg_interfaces/: CMakeLists.txt  package.xml
src/middle_nodes/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/middle_nodes/include/middle_nodes/: controller_supervisor.hpp
src/middle_nodes/launch/: gripper.launch.py  zed_vr_conexion.launch.py
src/middle_nodes/middle_nodes/: listener.py  listener2.py  talker.py  zed_stream.py  zedimage_bridge.py
src/middle_nodes/scripts/: franka_state_monitor.py  gripper_command.py  keyboard_input.py  modify_pose.py
src/middle_nodes/src/: controller_supervisor.cpp  gripper_control_node.cpp
vr_interface/: CMakeLists.txt  package.xml
vr_interface/include/vr_interface/: move_test.hpp
vr_interface/launch/: move_test.launch.py  moveit_demo.launch.py
vr_interface/scripts/: errorRecoveryClient.py  keyboard_input.py  move_controller.py  test.py  test2.py
vr_interface/src/: move_test.cpp  robot_controller.cpp
(+91 files in other folders)
