<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vr_interface</name>
  <version>0.0.1</version>
  <description>Bidirectional communication from Robot to VR</description>
  <maintainer email="riveraa.juanp@gmail.com">fr3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rcl</depend>
  <depend>rosidl_typesupport_interface</depend>
  <depend>builtin_interfaces</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>libstatistics_collector</depend>
  <depend>rcl_lifecycle</depend>
  <depend>class_loader</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
