<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>franka_teleop_pkg</name>
  <version>0.0.0</version>
  <description>In the VRTeleop Interface for the franka, this is the package to control the robot</description>

  <maintainer email="riveraa.juanp@gmail.com">Juan Pablo Rivera Arbelaez</maintainer>
  <author email="riveraa.juanp@gmail.com">Juan Pablo Rivera Arbeláez</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS built-in dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Third-party ROS dependencies -->
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <!-- First-party ROS dependencies -->
  <depend>franka_teleop_pkg_interfaces</depend>

  <!-- Other dependencies -->

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
